@@ -18,7 +18,7 @@ module ActiveSupport #:nodoc:
           ::DateTime.civil(
             options[:year]  || self.year,
             options[:month] || self.month,
-            options[:day]   || options[:mday] || self.day, # mday is deprecated
+            options[:day]   || self.day,
             options[:hour]  || self.hour,
             options[:min]   || (options[:hour] ? 0 : self.min),
             options[:sec]   || ((options[:hour] || options[:min]) ? 0 : self.sec),
